--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
         $(function () {
+            alert("현재 페이지는 최소 1024px까지 지원합니다.\n추후 업데이트할 예정입니다.")
             /* 메인 비주얼 슬라이드 */
             var swiper2 = new Swiper(".main", {
                 grabCursor: true,
