--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                             <div class="item">
                                 <div class="top">
                                     <div class="left">
-                                        <strong>소닉 X 셰도우</strong>
+                                        <strong>소닉 X 섀도우</strong>
                                         <span>₩44,800</span>
                                     </div>
                                     <img src="img/icon/이용등급.svg.svg" alt="전체이용가">
